libs/updraft_core/tests/scenario/snapshots/scenario__external_devices__edit_external_device_restarts_an_enabled_device_with_the_same_id.snap
---
source: libs/updraft_core/tests/scenario/external_devices.rs
expression: mutation_effects(&effects)
---
close ExternalDeviceId([ID])
open ExternalDeviceId([ID]) Tcp { host: "192.0.2.1", port: 10110 }
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "192.0.2.1", port: 10110 } } }]
persist settings SettingsSnapshot { settings: Settings { flarm_position_correction: true, energy_compensation: true, climb_average_method: Smoothed20s, hillshade_direction: Fixed, locale: None, polar: PolarId("LS 8"), arrival_reserve: ArrivalReserve(200.0), units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: true, spec: Tcp { host: "192.0.2.1", port: 10110 } }] }
