libs/updraft_core/tests/scenario/snapshots/scenario__external_devices__edit_external_device_tcp_to_bluetooth.snap
---
source: libs/updraft_core/tests/scenario/external_devices.rs
expression: mutation_effects(&tcp_to_bluetooth)
---
close ExternalDeviceId([ID])
open ExternalDeviceId([ID]) BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb }
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb } } }]
persist settings SettingsSnapshot { settings: Settings { flarm_position_correction: true, energy_compensation: true, climb_average_method: Smoothed20s, hillshade_direction: Fixed, locale: None, polar: PolarId("LS 8"), arrival_reserve: ArrivalReserve(200.0), units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: true, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb } }] }
