libs/updraft_core/tests/scenario/snapshots/scenario__external_devices__reorder_external_devices_publishes_and_persists_the_new_order.snap
---
source: libs/updraft_core/tests/scenario/external_devices.rs
expression: mutation_effects(&effects)
---
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: false, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb } } }, PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } } }]
persist settings SettingsSnapshot { settings: Settings { flarm_position_correction: true, energy_compensation: true, climb_average_method: Smoothed20s, locale: None, polar: PolarId("LS 8"), arrival_reserve: ArrivalReserve(200.0), units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: false, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb } }, ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } }] }
