libs/updraft_core/tests/scenario/snapshots/scenario__external_devices__set_external_device_enabled_enables_a_disabled_device.snap
---
source: libs/updraft_core/tests/scenario/external_devices.rs
expression: mutation_effects(&effects)
---
open ExternalDeviceId([ID]) Tcp { host: "127.0.0.1", port: 4353 }
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } } }]
persist settings SettingsSnapshot { settings: Settings { traffic_climb_method: NormalizedEma, locale: None, polar: PolarId("LS 8"), arrival_reserve: ArrivalReserve(200.0), units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } }] }
